# cpp-proj-vscode

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: hello.hpp  hello2.hpp
src/: hello.cpp  hello2.cpp
test/: hello2_test.cpp  hello_test.cpp
